# careerdex

./: .env.template  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  poe_tasks.toml  pyproject.toml  sonar-project.properties
.github/: CHECKLISTS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/instructions/: data-pipelines.instructions.md  fastapi.instructions.md  ml.instructions.md  python.instructions.md  testing.instructions.md
.github/workflows/: cd.yml  ci.yml  docker-build-push.yml  release.yml  security.yml
api-collection/: bruno.json
api-collection/environments/: local.bru
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  OBSERVABILITY.md  index.md  quickstart.md
docs/adr/: 0000-template.md
src/careerdex/: __init__.py  cli.py  plugin.py
src/careerdex/api/: main.py
src/careerdex/core/: notifier.py
src/careerdex/dags/: job_ingestion_dag.py
src/careerdex/phases/: phase1_foundation.py  phase3_embeddings.py  phase4_ml_models.py  phase5_api_services.py
tasks/: findings.md  lessons.md
tests/: conftest.py
tests/unit/: test_api.py  test_cli.py
