[project]
name = "careerdex"
version = "0.5.0"
description = "AI career intelligence — job matching, resume analysis, salary prediction, powered by DataEngineX"
authors = [
    {name = "Jay", email = "jayapal.myaka99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["career", "job-matching", "ml", "data-engineering", "dataenginex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dataenginex>=0.6.1",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.6.0",
    "xgboost>=3.0.0",
    "numpy>=2.4",
    "sentence-transformers>=2.0.0",
]
airflow = [
    "apache-airflow>=2.8.0",
    "requests>=2.32.0",
]

[project.scripts]
careerdex = "careerdex.cli:main"

[project.entry-points."dataenginex.plugins"]
careerdex = "careerdex.plugin:CareerDEXPlugin"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careerdex"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20260107",
    "poethepoet>=0.40.0",
    "uv>=0.10.0",
    "zensical>=0.0.24",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.28.0",
    "locust>=2.31.0",
]

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["structlog.*", "loguru.*", "prometheus_client.*", "opentelemetry.*", "airflow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "sklearn.*", "xgboost.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:websockets\\.legacy",
    "ignore::DeprecationWarning:uvicorn\\.protocols",
]

[tool.coverage.run]
branch = true
source = ["careerdex"]

[tool.coverage.report]
show_missing = true
skip_covered = true
